[package]
name = "elektron"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }